toolchain/internal/core/analysis/testdata/valid/nested_types_complex.vdl
// @expect-no-errors
// @assert: has-type Project

type Project {
  id string
  members {
    name string
    role string
  }[]
  labels map[string]
}
