toolchain/internal/core/analysis/testdata/errors/types/undefined_in_deep_inline_array.vdl
// @expect: E201

type Event {
  payload {
    entries {
      item MissingType
    }[]
  }
}
